# CS253-Project

./: .gitignore  test.sh
project/: .cproject  .gitignore  CMakeLists.txt  Doxyfile  Makefile  PA10  PA6.tar  PA9  atest.pgm  benchmark.sh  cachegrind.out.13844  cachegrind.out.2995  callgrind.out.13196  callgrind.out.29453  callgrind.out.5750  footest.pgm  histogram.cpp  histogram.hpp  main.cpp  number_list.cpp  number_list.hpp  out.txt  outputcheck.rb  table.txt  test.pgm  test.txt  test2.pgm  test_output.rb  timefiles.rb
project/include/: depth_image.cpp  depth_image.hpp  depth_image_list.hpp  errors.hpp  histogram.hpp  histogram_group.hpp  image_dataset.hpp  image_group.hpp  image_grouper.hpp  perception.hpp  perception_trainer.hpp  pgm_image.hpp  pixel_group.hpp  quad_group.hpp
project/src/: depth_image.cpp  depth_image_list.cpp  errors.cpp  histogram.cpp  histogram_group.cpp  image_dataset.cpp  image_group.cpp  image_grouper.cpp  perception.cpp  perception_trainer.cpp  pgm_image.cpp  pixel_group.cpp  quad_group.cpp
project/test/: histogram_test.cpp
project/test_files/given/: depth_1_0000003.pgm
project/test_files/list/: bad.txt  big.txt  given.txt  good.txt
project/test_files/perceptron_test/: test.txt
project/test_files/perceptron_train/: input_2.txt  input_3.txt
project/test_files/pgm/: bad_header.pgm  bad_max.pgm  bad_pixel_count.pgm  quad_b.pgm  quad_c.pgm  quad_d.pgm  quad_e.pgm  quad_f.pgm
project/test_srcs/: depth_image_list_test.cpp  depth_image_test.cpp  histogram_group_test.cpp  histogram_test.cpp  image_grouper_test.cpp  pgm_image_test.cpp
(+2 files in other folders)
